LU-4688 debug: check export for async commit

This debug patch is to check whether a client's export has been
cleaned up when we registered an async commit callback.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I626566dc13a1935f4215228812f112c5ef0ba600