lustre/ofd/ofd_io.c
@@ -791,6 +791,12 @@ static int ofd_soft_sync_cb_add(struct thandle *th, struct obd_export *exp)
 	struct dt_txn_commit_cb			*dcb;
 	int					 rc;
 
+	LASSERTF(exp != NULL && exp != (void *)0xdeadbeef &&
+		 atomic_read(&exp->exp_refcount) > 0 &&
+		 atomic_read(&exp->exp_refcount) < LI_POISON,
+		 "export of client %s (ref=%d) has been cleaned up\n",
+		 exp->exp_client_uuid.uuid, atomic_read(&exp->exp_refcount));
+
 	OBD_ALLOC_PTR(ossc);
 	if (ossc == NULL)
 		return -ENOMEM;
